--- a/_quarto.yml
+++ b/_quarto.yml
@@ -28,7 +28,7 @@ website:
     image: images/og-image.png
     image-width: 2400
     image-height: 1600
-    image-alt: CEM Open Graph Image
+    image-alt: Center for Metropolitan Studies
   repo-branch: main
   repo-actions: [edit, source, issue]
   search: false
